--- a/src/components/pages/Search.css
+++ b/src/components/pages/Search.css
@@ -7,6 +7,7 @@
 .search-container h1 {
   position: relative;
   top: -30px;
+  font-size: 40px;
 }
 
 .search-row {
@@ -15,7 +16,7 @@
 }
 
 .search-container input[type="text"] {
-  width: 300px;
+  width: 250px;
   height: 20px;
   font-size: 16px;
   padding: 5px 10px;
