--- a/src/components/pages/Search.css
+++ b/src/components/pages/Search.css
@@ -7,6 +7,10 @@
 .search-container h1 {
   position: relative;
   top: -30px;
+
+  font-size: clamp(18px, 6vw, 28px);
+  line-height: 1.2;
+  width: min(90vw, 600px);
 }
 
 .search-row {
