--- a/src/components/pages/Category.css
+++ b/src/components/pages/Category.css
@@ -5,6 +5,9 @@
 .category-container h1 {
   position: relative;
   top: -118px;
+
+  font-size: clamp(18px, 6vw, 35px);
+  line-height: 1.2;
 }
 
 .category-grid {
